external-crates/move/crates/move-analyzer/tests/parse-error/sources/M2.move
module ParseError::M2 {

    struct SomeStruct {
        some_field: u64
    }
}
